--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
+    "imagemin": "^8.0.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "moment": "^2.29.4",
