--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-NEXT_PUBLIC_API_BASE_URL=https://slicbackend.etherstaging.xyz/api
-# NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
-NEXT_PUBLIC_MEDIA_URL=https://slicbackend.etherstaging.xyz
-# NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
+# NEXT_PUBLIC_API_BASE_URL=https://slicbackend.etherstaging.xyz/api
+NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
+# NEXT_PUBLIC_MEDIA_URL=https://slicbackend.etherstaging.xyz
+NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
 NEXT_PUBLIC_GOOGLE_ANALYTICS_LINK=https://lookerstudio.google.com/embed/reporting/c9524b56-5ca9-4877-8d07-6768076e1125/page/cI3iD
 # PORT=9001
+NEXT_PUBLIC_REMOVE_BG_API_KEY=ddXX3uRvULBnRz2Eu8UnphfW
+NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyD-9tSr3X9t3YV3YV3YV3YV3YV3YV3YV3Y
