--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.8.6",
-    "axios": "^1.5.0",
+    "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "form-data": "^4.0.0",
     "imagemin": "^8.0.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
