--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.14.1",
     "axios": "^1.6.7",
+    "croppie": "^2.6.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.0.5",
     "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
