--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-easy-crop": "^5.0.5",
     "react-helmet": "^6.1.0",
+    "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
     "react-virtualized": "^9.22.5"
