--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
-    "react-virtualized": "^9.22.5"
+    "react-virtualized": "^9.22.5",
+    "youtube-dl-exec": "^2.5.7",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "eslint": "8.49.0",
