updated reset password

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# NEXT_PUBLIC_API_BASE_URL=https://mave-almuslim.etherstaging.xyz/api
-NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
-# NEXT_PUBLIC_MEDIA_URL=https://mave-almuslim.etherstaging.xyz
-NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
+NEXT_PUBLIC_API_BASE_URL=https://mave-almuslim.etherstaging.xyz/api
+# NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
+NEXT_PUBLIC_MEDIA_URL=https://mave-almuslim.etherstaging.xyz
+# NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
 NEXT_PUBLIC_GOOGLE_ANALYTICS_LINK=https://lookerstudio.google.com/embed/reporting/c9524b56-5ca9-4877-8d07-6768076e1125/page/cI3iD
