--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
+    "froala-editor": "^4.2.0",
     "imagemin": "^8.0.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
@@ -31,6 +32,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-easy-crop": "^5.0.5",
+    "react-froala-wysiwyg": "^4.2.0",
     "react-helmet": "^6.1.0",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
