--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@google/generative-ai": "^0.8.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "antd": "^5.14.1",
@@ -34,6 +35,7 @@
     "react-easy-crop": "^5.0.5",
     "react-froala-wysiwyg": "^4.2.0",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
