--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS_LINK=https://lookerstudio.google.com/embed/reportin
 NEXT_PUBLIC_REMOVE_BG_API_KEY=ddXX3uRvULBnRz2Eu8UnphfW
 NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyD-9tSr3X9t3YV3YV3YV3YV3YV3YV3YV3Y
 NEXT_PUBLIC_YOUTUBE_API_KEY=AIzaSyDVBUmsIp77CEDliY0Rl7c05tRMM029gXI
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyD_DltaQ2lYmo6p5JFpEWuNmjcaMoXoyIM
