--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.15",
     "react-virtualized": "^9.22.5",
+    "remark-gfm": "^4.0.0",
     "youtube-dl-exec": "^2.5.7",
     "ytdl-core": "^4.11.5"
   },
