--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "quill": "^1.3.7",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-easy-crop": "^5.0.5",
     "react-froala-wysiwyg": "^4.2.0",
@@ -39,7 +40,6 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
-    "react-syntax-highlighter": "^15.5.0",
     "react-text-to-speech": "^0.14.5",
     "react-to-print": "^2.14.15",
     "react-virtualized": "^9.22.5",
