--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ NEXT_PUBLIC_YOUTUBE_API_KEY=AIzaSyDVBUmsIp77CEDliY0Rl7c05tRMM029gXI
 NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyCn3Z1qsK_fJ1-gWnh5gNoDzL0BLO2PqZw
 NEXT_PUBLIC_IMAGEBB_API_KEY=83f37e7f64263af6c225ccebf679cec5
 NEXT_PUBLIC_TINY_MCE_API_KEY=0v62yqtjktptwg915dnzwu5e3i04dg78qiwwwdkwmku67fcp
+NEXT_PUBLIC_FP_API_KEY=FPSXb83f114719a548a6be78a4ee99993210
