--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "imagemin": "^8.0.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
+    "marked": "^12.0.2",
     "moment": "^2.29.4",
     "next": "^12.3.4",
     "pdf-thumbnail": "^1.0.6",
     "pdfjs-dist": "^3.4.120",
+    "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -41,6 +43,7 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-text-to-speech": "^0.14.5",
     "react-to-print": "^2.14.15",
     "react-virtualized": "^9.22.5",
