--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
     "froala-editor": "^4.2.0",
+    "http-proxy-middleware": "^3.0.0",
     "imagemin": "^8.0.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
