working on user management settings

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@tinymce/tinymce-react": "^5.0.1",
-    "antd": "^5.17.2",
+    "antd": "^5.19.0",
     "axios": "^1.6.7",
     "croppie": "^2.6.5",
     "dayjs": "^1.11.10",
@@ -29,6 +29,7 @@
     "marked": "^12.0.2",
     "moment": "^2.29.4",
     "next": "^12.3.4",
+    "papaparse": "^5.4.1",
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "react": "18.2.0",
