--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "quill": "^1.3.7",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-easy-crop": "^5.0.5",
