--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# NEXT_PUBLIC_API_BASE_URL=https://apimave-engine.etherstaging.xyz/api
-# NEXT_PUBLIC_MEDIA_URL=https://apimave-engine.etherstaging.xyz
-NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:8000/api
-NEXT_PUBLIC_MEDIA_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_API_BASE_URL=https://apimave-engine.etherstaging.xyz/api
+NEXT_PUBLIC_MEDIA_URL=https://apimave-engine.etherstaging.xyz
+# NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:8000/api
+# NEXT_PUBLIC_MEDIA_URL=http://127.0.0.1:8000
 NEXT_PUBLIC_GOOGLE_ANALYTICS_LINK=https://lookerstudio.google.com/embed/reporting/c9524b56-5ca9-4877-8d07-6768076e1125/page/cI3iD
 NEXT_PUBLIC_REMOVE_BG_API_KEY=ddXX3uRvULBnRz2Eu8UnphfW
 NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyD-9tSr3X9t3YV3YV3YV3YV3YV3YV3YV3Y
