--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-easy-crop": "^5.0.5",
     "react-froala-wysiwyg": "^4.2.0",
