--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.19.0",
+    "apexcharts": "^3.53.0",
     "axios": "^1.6.7",
     "croppie": "^2.6.5",
     "dayjs": "^1.11.10",
@@ -33,6 +34,7 @@
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.3",
