--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
-NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
+# NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
+# NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
+# NEXT_PUBLIC_API_BASE_URL=https://beta.etherstaging.com/api
+# NEXT_PUBLIC_MEDIA_URL=https://beta.etherstaging.com
+NEXT_PUBLIC_API_BASE_URL=https://mave-almuslim.etherstaging.xyz/api
+NEXT_PUBLIC_MEDIA_URL=https://mave-almuslim.etherstaging.xyz
