updated breadcrumb and showcase dynamic models

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 # NEXT_PUBLIC_MEDIA_URL=https://mave-almuslim.etherstaging.xyz
 NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:8000/api
 NEXT_PUBLIC_MEDIA_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_DYNAMIC_MODEL_URL=http://127.0.0.1:8000
