--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "next": "^12.3.4",
     "papaparse": "^5.4.1",
+    "pluralize": "^8.0.0",
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "react": "18.2.0",
