--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.21",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
