--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=production
 NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
 NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
 # NEXT_PUBLIC_API_BASE_URL=https://beta.etherstaging.com/api
