--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19"
+    "eslint-config-next": "13.4.19",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
