--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
 NODE_ENV=production
 NEXT_PUBLIC_API_BASE_URL=https://apimave-engine.etherstaging.xyz/api
 NEXT_PUBLIC_MEDIA_URL=https://apimave-engine.etherstaging.xyz
-# NEXT_PUBLIC_API_BASE_URL=https://slicbackend.etherstaging.xyz/api
-# NEXT_PUBLIC_MEDIA_URL=https://slicbackend.etherstaging.xyz
-# NEXT_PUBLIC_API_BASE_URL=https://mave-almuslim.etherstaging.xyz/api
-# NEXT_PUBLIC_MEDIA_URL=https://mave-almuslim.etherstaging.xyz
-# NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:8000/api
-# NEXT_PUBLIC_MEDIA_URL=http://127.0.0.1:8000
+# NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
+# NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
 # NEXT_PUBLIC_DYNAMIC_MODEL_URL=http://127.0.0.1:8000
