--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@tinymce/tinymce-react": "^5.0.1",
+    "ace-builds": "^1.36.3",
     "antd": "^5.19.0",
     "apexcharts": "^3.53.0",
     "axios": "^1.6.7",
@@ -36,6 +37,7 @@
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "react": "18.2.0",
+    "react-ace": "^12.0.0",
     "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-copy-to-clipboard": "^5.1.0",
