--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_MEDIA_URL=https://apimave-engine.etherstaging.xyz
 # NEXT_PUBLIC_API_BASE_URL=https://apimave-dev.etherstaging.xyz/api
 # NEXT_PUBLIC_MEDIA_URL=https://apimave-dev.etherstaging.xyz
 # NEXT_PUBLIC_DYNAMIC_MODEL_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDLuBVRtpOzISH_c8JUX_vtFHw76CL_8M0
