--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@google/generative-ai": "^0.8.0",
     "@react-google-maps/api": "^2.20.3",
     "@react-pdf-viewer/core": "^3.12.0",
