--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.6.1",
     "react-text-to-speech": "^0.14.5",
     "react-to-print": "^2.14.15",
     "react-virtualized": "^9.22.5",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
