working on cloudinary

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_MEDIA_URL=https://apimave-engine.etherstaging.xyz
 NEXT_PUBLIC_DYNAMIC_MODEL_URL=https://apimave-engine.etherstaging.xyz
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 OPENAI_API_KEY=
+CLOUDINARY_URL=
