--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ NEXT_PUBLIC_DYNAMIC_MODEL_URL=https://apimave-engine.etherstaging.xyz
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 OPENAI_API_KEY=
 CLOUDINARY_URL=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_API_KEY=
+NEXT_PUBLIC_CLOUDINARY_API_SECRET=
