--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
+    "formidable": "^3.5.2",
     "froala-editor": "^4.2.0",
     "http-proxy-middleware": "^3.0.0",
     "imagemin": "^8.0.1",
@@ -57,6 +58,7 @@
     "react-froala-wysiwyg": "^4.2.0",
     "react-google-charts": "^4.0.1",
     "react-helmet": "^6.1.0",
+    "react-lazyload": "^3.2.1",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
