--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@ant-design/icons": "^5.2.6",
     "@cloudinary/url-gen": "^1.21.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@google/generative-ai": "^0.8.0",
     "@react-google-maps/api": "^2.20.3",
+    "@react-oauth/google": "^0.12.1",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@tinymce/tinymce-react": "^5.0.1",
@@ -31,6 +36,7 @@
     "form-data": "^4.0.0",
     "formidable": "^3.5.2",
     "froala-editor": "^4.2.0",
+    "googleapis": "^144.0.0",
     "http-proxy-middleware": "^3.0.0",
     "imagemin": "^8.0.1",
     "js-yaml": "^4.1.0",
