--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-NODE_ENV=production
-NEXT_PUBLIC_API_BASE_URL=https://apimave-engine.etherstaging.xyz/api
-NEXT_PUBLIC_MEDIA_URL=https://apimave-engine.etherstaging.xyz
-NEXT_PUBLIC_DYNAMIC_MODEL_URL=https://apimave-engine.etherstaging.xyz
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
-OPENAI_API_KEY=
-CLOUDINARY_URL=
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
-NEXT_PUBLIC_CLOUDINARY_API_KEY=
-NEXT_PUBLIC_CLOUDINARY_API_SECRET=
+NODE_ENV=development
+NEXT_PUBLIC_API_BASE_URL=YOUR_API_BASE_URL
+NEXT_PUBLIC_MEDIA_URL=YOUR_MEDIA_URL
+NEXT_PUBLIC_DYNAMIC_MODEL_URL=YOUR_DYNAMIC_MODEL_URL
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+CLOUDINARY_URL=YOUR_CLOUDINARY_URL
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=YOUR_CLOUDINARY_CLOUD_NAME
+NEXT_PUBLIC_CLOUDINARY_API_KEY=YOUR_CLOUDINARY_API_KEY
+NEXT_PUBLIC_CLOUDINARY_API_SECRET=YOUR_CLOUDINARY_API_SECRET
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET
