--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "openai": "^4.70.2",
     "papaparse": "^5.4.1",
     "pluralize": "^8.0.0",
+    "prettier": "^3.3.3",
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "react": "18.2.0",
