--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-to-print": "^2.14.15",
     "react-virtualized": "^9.22.5",
     "recharts": "^2.12.7",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
