text being added nicely but not perfectly in blog creator

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "croppie": "^2.6.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "event-source-polyfill": "^1.0.31",
     "form-data": "^4.0.0",
     "formidable": "^3.5.2",
     "froala-editor": "^4.2.0",
@@ -41,6 +42,7 @@
     "moment": "^2.29.4",
     "next": "^12.3.4",
     "next-transpile-modules": "^10.0.1",
+    "node-fetch": "^2.7.0",
     "openai": "^4.70.2",
     "papaparse": "^5.4.1",
     "pluralize": "^8.0.0",
