--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ajv-formats": "^3.0.1",
     "antd": "^5.19.0",
     "apexcharts": "^3.53.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.6.7",
     "cloudinary": "^2.5.1",
     "croppie": "^2.6.5",
@@ -30,6 +31,8 @@
     "dompurify": "^3.2.0",
     "dotenv": "^16.3.1",
     "event-source-polyfill": "^1.0.31",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "formidable": "^3.5.2",
     "froala-editor": "^4.2.0",
@@ -66,6 +69,7 @@
     "react-lazyload": "^3.2.1",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
+    "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.6.1",
@@ -75,6 +79,7 @@
     "recharts": "^2.12.7",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "uuid": "^10.0.0",
