--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@tinymce/tinymce-react": "^5.0.1",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "ace-builds": "^1.36.3",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
